--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,5 +4,6 @@ Description: Scrape information from GS program Web pages
 Version: 0.1-0
 Author: Duncan Temple Lang
 Maintainer: <dtemplelang@ucdavis.edu>
-Imports: XML, RCurl, RJSONIO
+Imports: XML, RCurl, RJSONIO, utils
 Suggests: ReadPDF, PRM
+
